--- a/tic-tac-toe/package.json
+++ b/tic-tac-toe/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://yuvalberkovichcs.github.io/TicTacToe/",
+  "homepage": "yuvalberkovichcs.github.io/TicTacToe/",
   "name": "tic-tac-toe",
   "version": "0.1.0",
   "private": true,
