--- a/tic-tac-toe/package.json
+++ b/tic-tac-toe/package.json
@@ -1,7 +1,7 @@
 {
-  "homepage": "http://yuvalberkovichcs.github.io/TicTacToe/",
   "name": "tic-tac-toe",
   "version": "0.1.0",
+  "homepage": "https://yuvalberkovichcs.github.io/TicTacToe/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -14,9 +14,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "build": "react-scripts build",
+    "build": "react-scripts build && rm -rf docs && mv build docs",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
