--- a/tic-tac-toe/package.json
+++ b/tic-tac-toe/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tic-tac-toe",
   "version": "0.1.0",
-  "homepage": "https://yuvalberkovichcs.github.io/TicTacToe/",
+  "homepage": "https://yuvalberkovichcs.github.io/TicTacToe",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
